--- a/estilos.html
+++ b/estilos.html
@@ -45,13 +45,15 @@
                     <button class="button-style" data-style="Original">Original</button>
                     <button class="button-style" data-style="Impresionismo">Impresionismo</button>
                     <button class="button-style" data-style="Post Impresionismo">Post Impresionismo</button>
-                    <button class="button-style" data-style="Ilust">I</button>
-                    <button class="button-style" data-style="Bauhaus">Bauhaus</button>
-                    <button class="button-style" data-style="Pop Art">Pop Art</button>
-                    <button class="button-style" data-style="Anime">Anime</button>
                     <button class="button-style" data-style="Art Nouveau">Art Nouveau</button>
-                    <button class="button-style" data-style="Realismo">Realismo</button>
+                    <button class="button-style" data-style="Pop Art">Pop Art</button>
+                    <button class="button-style" data-style="Bauhaus">Bauhaus</button>
                     <button class="button-style" data-style="Retro">Retro</button>
+                    <button class="button-style" data-style="Ilust">Ilustración</button>
+                    <button class="button-style" data-style="Anime">Anime</button>
+                    <button class="button-style" data-style="Realismo">Realismo</button>
+
+
                 </div>
             </div>
 
@@ -62,7 +64,28 @@
                     Selecciona un estilo artístico de los botones de arriba para ver una imagen representativa.
                 </p>
             </div>
+
+
+            
+            <div class="p-4 bg-orange-50 rounded-md shadow-sm">
+                <h3 class="text-xl font-semibold text-orange-700 mb-4">Herramientas Utilizadas para esta Demostración</h3>
+                <p class="text-gray-700 mb-4">
+                    Para la creación de esta página de ejemplo y la simulación de la experiencia, se han utilizado las siguientes tecnologías y recursos:
+                </p>
+                <ul class="list-disc list-inside space-y-2 text-gray-700">
+                    <li>
+                        <a href="https://www.dzine.ai/home" target="_blank" rel="noopener noreferrer" class="text-orange-600 hover:text-orange-800 font-medium">
+                            DZine
+                        </a>: Creación de estilos a partir de imagen usando IA
+                    </li>
+                    <li>
+                        HTML5 y Gemini: Para la estructura básica de la página web.
+                    </li>
+                </ul>
+            </div>
         </section>
+
+
     </main>
 
     <footer class="bg-orange-700 text-white p-6 mt-8 rounded-t-lg">
@@ -92,8 +115,8 @@
             },
             "Ilust": {
                 src: "./assets/blanca_ilust.jpg",
-                alt: "Obra de estilo ",
-                description: "El Renacimiento,"
+                alt: "Obra de estilo Ilustración",
+                description: "La ilustración, caracterizado por una gran diversidad de estilos, técnicas y enfoques"
             },
             "Bauhaus": {
                 src: "./assets/blanca_pop.jpg",
