--- a/estilos.html
+++ b/estilos.html
@@ -91,7 +91,7 @@
     <footer class="bg-orange-700 text-white p-6 mt-8 rounded-t-lg">
         <div class="container mx-auto text-center">
             <p>&copy; 2025 Blanca Cerveró Beltrán</p>
-            <p class="text-sm mt-2">Diseñado con Tailwind CSS.</p>
+            <p class="text-sm mt-2"></p>
         </div>
     </footer>
 
