--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
                     </a>
                 </li>
                 <li class="bg-orange-50 p-4 rounded-md shadow-sm hover:bg-orange-100 transition duration-300 ease-in-out">
-                    <a href="https://www.ivam.es/exposiciones/" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
+                    <a href="./estilos.html" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
                         Cómo me veo cuando me pinta...
                         <span class="text-sm text-gray-600 block">Mi retrato moderno</span>
                     </a>
                 </li>
                 <li class="bg-orange-50 p-4 rounded-md shadow-sm hover:bg-orange-100 transition duration-300 ease-in-out">
-                    <a href="https://www.ivam.es/coleccion/" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
+                    <a href="" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
                         Visión por Computador en Sala: Análisis de Datos del Visitante
                         <span class="text-sm text-gray-600 block">Un recorrido por una sala y obtención de datos</span>
                     </a>
                 </li>
                 <li class="bg-orange-50 p-4 rounded-md shadow-sm hover:bg-orange-100 transition duration-300 ease-in-out">
-                    <a href="https://www.ivam.es/actividades-educativas/" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
+                    <a href="./pintura.html" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
                         Instalación de Pintura Interactiva "A qué Artista te Pareces"
                         <span class="text-sm text-gray-600 block">Pinta como un Artista</span>
                     </a>
                 </li>
                 <li class="bg-orange-50 p-4 rounded-md shadow-sm hover:bg-orange-100 transition duration-300 ease-in-out">
-                    <a href="https://www.ivam.es/noticias/" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
+                    <a href="" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
                         Experiencia Inmersiva: El Taller del Artista
                         <span class="text-sm text-gray-600 block">La obra de arte en el lugar que nació</span>
                     </a>
