--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     </a>
                 </li>
                 <li class="bg-orange-50 p-4 rounded-md shadow-sm hover:bg-orange-100 transition duration-300 ease-in-out">
-                    <a href="" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
-                        Experiencia Inmersiva: El Taller del Artista
+                    <a href="./bucea2.html" target="_blank" rel="noopener noreferrer" class="text-orange-700 hover:text-orange-900 font-medium text-lg block">
+                        Experiencia Inmersiva: Bucea en el Arte
                         <span class="text-sm text-gray-600 block">La obra de arte en el lugar que nació</span>
                     </a>
                 </li>
