--- a/taller_ar.html
+++ b/taller_ar.html
@@ -10,29 +10,32 @@
     <!-- Incluir AR.js (basado en three.js) -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.min.js"></script>
     <style>
-        /* Estilos generales para centrar el contenido y asegurar que ocupe toda la pantalla */
+        /* Estilos generales para asegurar que el body ocupe toda la pantalla y no tenga márgenes */
         body {
             margin: 0;
-            overflow: hidden;
+            overflow: hidden; /* Oculta barras de desplazamiento */
             font-family: "Inter", sans-serif;
             background-color: #f0f0f0;
-            display: flex;
+            display: flex; /* Usar flexbox para centrar contenido si es necesario */
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 100vh;
+            min-height: 100vh; /* Asegura que ocupe al menos la altura de la ventana */
+            width: 100vw; /* Asegura que ocupe el ancho de la ventana */
             color: #333;
+            position: relative; /* Necesario para posicionar elementos absolutos dentro */
         }
-        /* Estilos para el contenedor de la aplicación AR */
-        #ar-container {
-            position: relative;
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+
+        /* Estilos para la escena AR para que ocupe todo el espacio */
+        a-scene {
+            position: absolute; /* Posiciona la escena absolutamente */
+            top: 0;
+            left: 0;
+            width: 100%; /* Ocupa todo el ancho */
+            height: 100%; /* Ocupa toda la altura */
+            z-index: 0; /* Asegura que esté en la capa de fondo */
         }
+
         /* Estilos para el mensaje de carga o instrucciones */
         #message-box {
             position: absolute;
@@ -46,7 +49,7 @@
             text-align: center;
             font-size: 1.1em;
             color: #4a5568;
-            z-index: 1000;
+            z-index: 1000; /* Asegura que el mensaje esté por encima de la escena AR */
         }
         .rounded-lg {
             border-radius: 0.5rem; /* Tailwind's default rounded-lg */
@@ -118,11 +121,22 @@
                 console.error('Error al acceder a la cámara:', err);
                 const messageBox = document.getElementById('message-box');
                 if (messageBox) {
-                    messageBox.innerHTML = `
-                        <p class="text-red-600">Error: No se pudo acceder a la cámara.</p>
-                        <p class="text-red-600">Asegúrate de haber concedido los permisos de la cámara en tu navegador.</p>
-                        <p class="mt-2 text-sm text-gray-600">Detalles: ${err.name || 'Error desconocido'}</p>
-                    `;
+                    let errorMessage = `<p class="text-red-600">Error al acceder a la cámara.</p>`;
+                    if (err.name === 'NotFoundError' || err.name === 'DevicesNotFoundError') {
+                        errorMessage += `<p class="text-red-600">Parece que no se encontró un dispositivo de cámara.</p>`;
+                        errorMessage += `<p class="text-red-600 text-sm">Asegúrate de que la cámara esté conectada y no esté siendo utilizada por otra aplicación.</p>`;
+                    } else if (err.name === 'NotAllowedError' || err.name === 'PermissionDeniedError') {
+                        errorMessage += `<p class="text-red-600">Has denegado el permiso para usar la cámara.</p>`;
+                        errorMessage += `<p class="text-red-600 text-sm">Por favor, habilita los permisos de la cámara en la configuración de tu navegador.</p>`;
+                    } else if (err.name === 'NotReadableError' || err.name === 'TrackStartError') {
+                        errorMessage += `<p class="text-red-600">La cámara está en uso o no se puede iniciar.</p>`;
+                        errorMessage += `<p class="text-red-600 text-sm">Cierra cualquier otra aplicación que pueda estar usando la cámara e inténtalo de nuevo.</p>`;
+                    } else {
+                        errorMessage += `<p class="text-red-600">Error desconocido al iniciar la cámara.</p>`;
+                    }
+                    errorMessage += `<p class="mt-2 text-sm text-gray-600">Detalles: ${err.message || err.name || 'Error desconocido'}</p>`;
+                    
+                    messageBox.innerHTML = errorMessage;
                     messageBox.style.display = 'block';
                 }
             });
