--- a/taller_ar2.html
+++ b/taller_ar2.html
@@ -18,7 +18,7 @@
       <a-marker preset="hiro">
         <!-- Imagen en RA -->
         <a-image
-          src="./assets/blanca_anime.jpg"
+          src="./assets/Figura imposible_ José María Yturralde.jpg"
           position="0 0.5 0"
           rotation="-90 0 0"
           width="1"
